--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/styles.scss
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+/* General settings for the scroll bar */
+::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  /* Track (background) */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+  }
+  
+  /* Handle (slider) */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+  }
+  
+  /* Handle when hovering over with mouse */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
