--- a/ethermancer-website/src/styles.scss
+++ b/ethermancer-website/src/styles.scss
@@ -5,3 +5,27 @@
 @import '@fortawesome/fontawesome-free/scss/brands.scss';
  
 @import 'mdb-angular-ui-kit/assets/scss/mdb.scss';
+
+
+/* General settings for the scroll bar */
+::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  /* Track (background) */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+  }
+  
+  /* Handle (slider) */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+  }
+  
+  /* Handle when hovering over with mouse */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
