--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/header/header.component.scss
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/dashboard/header/header.component.scss
@@ -9,11 +9,13 @@
     .logo {
       font-weight: bold;
       font-size: 20px;
+      cursor: pointer;
     }
     .user {
       display: flex;
       align-items: center;
       font-weight: bold;
+      cursor: pointer;
       .user-image {
         width: 50px;
         height: 50px;
