--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/terms/terms.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/terms/terms.component.html
@@ -43,3 +43,6 @@
 <br>
 <br>
 </div>
+<div mat-dialog-actions>
+    <button mat-button mat-dialog-close class="btn btn-primary">Close</button>
+</div>
