--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/terms/terms.component.scss
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/terms/terms.component.scss
@@ -1,4 +1,6 @@
 .terms-container{
     padding-left: 20px;
     padding-right: 20px;
+    max-height: 400px; // Höhe anpassen
+    overflow-y: auto; 
 }
