--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/register/register.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/register/register.component.html
@@ -87,10 +87,11 @@
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="datenschutz" name="datenschutz" required
               [(ngModel)]="datenschutzAccepted" (ngModelChange)="handleDatenschutzChange($event)">
-            <label class="form-check-label" for="datenschutz">
-              Terms <a routerLink="/terms" target="_blank">read</a>
-              and accept
-            </label>
+              <label class="form-check-label" for="datenschutz">
+                Terms <a href="javascript:void(0)" (click)="openTermsDialog()" class="terms-link">read</a>
+                and accept
+              </label>
+              
 
             <div class="invalid-feedback" *ngIf="!datenschutzAccepted">
               Sie müssen zustimmen, bevor Sie das Formular absenden können.
