--- a/ethermancer-website/src/app/components/about-ethermancer/about-ethermancer.component.scss
+++ b/ethermancer-website/src/app/components/about-ethermancer/about-ethermancer.component.scss
@@ -10,6 +10,12 @@ $bottom-padding: 100px;
 
 .card {
     max-width: 400px !important;
+    transition: transform 0.3s ease;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 .about-top-box {
