--- a/ethermancer-website/src/app/components/systems/systems.component.scss
+++ b/ethermancer-website/src/app/components/systems/systems.component.scss
@@ -6,4 +6,10 @@
 
 .card{
     margin-bottom: 32px !important;
+    transition: transform 0.3s ease;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
