--- a/ethermancer-website/src/app/components/investor-informations/investor-informations.component.scss
+++ b/ethermancer-website/src/app/components/investor-informations/investor-informations.component.scss
@@ -13,4 +13,10 @@
 .card{
     margin: 12px;
     min-width: 200px;
+    transition: transform 0.3s ease;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
