--- a/ethermancer-website/src/app/components/key-features/key-features.component.scss
+++ b/ethermancer-website/src/app/components/key-features/key-features.component.scss
@@ -1,4 +1,3 @@
-// Define varialbes
 $custom-text-light: #adadad;
 $background-blue: rgb(1, 1, 155);
 
@@ -42,4 +41,8 @@ p {
   max-width: 160px;
   margin-top: 32px;
   transform: rotate(270deg);
+}
+
+img{
+    padding-right: 10px!important;
 }
