--- a/ethermancer-website/src/app/components/key-features/key-features.component.html
+++ b/ethermancer-website/src/app/components/key-features/key-features.component.html
@@ -3,7 +3,7 @@
         <h1>Key Features</h1>
     </div>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class=" pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -104,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
