--- a/ethermancer-website/src/app/components/walkthrough/walkthrough.component.html
+++ b/ethermancer-website/src/app/components/walkthrough/walkthrough.component.html
@@ -6,24 +6,24 @@
         <h3>How to Get Started with Ethermancer</h3>
     </section>
     <section class="walkthrough-steps">
-        <div class="card">
+        <div class="card" data-aos="zoom-in" data-aos-duration="1000">
             <p><strong>Step 1:</strong> Sign up for an Ethermancer account. Visit our website and click the 'Sign Up'
                 button. Complete the registration form and verify your email.</p>
         </div>
-        <div class="card">
+        <div class="card" data-aos="zoom-in" data-aos-duration="1000">
             <p><strong>Step 2:</strong> Connect Your Wallet. Go to 'Settings' and connect your Ethereum wallet to
                 Ethermancer.</p>
         </div>
-        <div class="card">
+        <div class="card" data-aos="zoom-in" data-aos-duration="1000">
             <p><strong>Step 3:</strong> Configure Trading Preferences. Navigate to the 'Dashboard' and set your trading
                 preferences like stop-loss, take-profit, and risk level.</p>
         </div>
-        <div class="card">
+        <div class="card" data-aos="zoom-in" data-aos-duration="1000">
             <p><strong>Step 4:</strong> Test the Bot. Use our simulator to test the bot's performance based on
                 historical
                 data. Adjust your settings accordingly.</p>
         </div>
-        <div class="card">
+        <div class="card" data-aos="zoom-in" data-aos-duration="1000">
             <p><strong>Step 5:</strong> Start Trading. Once you're satisfied with the bot's performance in the
                 simulator,
                 you can start live trading. Activate the bot, and Ethermancer will take care of the rest.</p>
