--- a/ethermancer-website/src/app/components/roadmap/roadmap.component.html
+++ b/ethermancer-website/src/app/components/roadmap/roadmap.component.html
@@ -2,7 +2,7 @@
     <h5>ROADMAP</h5>
     <h6>THE PROCESS OF OUR ETHERMANCER PROGRAM</h6>
     <div class="list-container">
-        <div class="list">
+        <div class="list" data-aos="zoom-in" data-aos-duration="1000">
             <div class="list-left">
                 <div class="list-title">Conceptualization</div>
                 <div class="list-date">Jan 2023</div>
@@ -10,7 +10,7 @@
             <div class="list-number">1</div>
             <div class="list-description">Initial brainstorming and conceptual development of Ethermancer.</div>
         </div>
-        <div class="list">
+        <div class="list" data-aos="zoom-in" data-aos-duration="1000">
             <div class="list-left">
                 <div class="list-title">Feasibility Study</div>
                 <div class="list-date">Mar 2023</div>
@@ -18,7 +18,7 @@
             <div class="list-number">2</div>
             <div class="list-description">Conduct research and assess the market feasibility.</div>
         </div>
-        <div class="list">
+        <div class="list" data-aos="zoom-in" data-aos-duration="1000">
             <div class="list-left">
                 <div class="list-title">Development Phase</div>
                 <div class="list-date">Jun 2023</div>
@@ -26,7 +26,7 @@
             <div class="list-number">3</div>
             <div class="list-description">Start of the coding and algorithm development.</div>
         </div>
-        <div class="list">
+        <div class="list" data-aos="zoom-in" data-aos-duration="1000">
             <div class="list-left">
                 <div class="list-title">Alpha Testing</div>
                 <div class="list-date">Nov 2023</div>
@@ -35,7 +35,7 @@
             <div class="list-description">First internal tests, including bug fixing and initial performance tuning.
             </div>
         </div>
-        <div class="list">
+        <div class="list" data-aos="zoom-in" data-aos-duration="1000">
             <div class="list-left">
                 <div class="list-title">Beta Launch</div>
                 <div class="list-date">Jan 2024</div>
@@ -43,7 +43,7 @@
             <div class="list-number">5</div>
             <div class="list-description">Public beta release with limited access to early adopters.</div>
         </div>
-        <div class="list">
+        <div class="list" data-aos="zoom-in" data-aos-duration="1000">
             <div class="list-left">
                 <div class="list-title">Performance Tuning</div>
                 <div class="list-date">Apr 2024</div>
