--- a/ethermancer-website/src/app/components/roadmap/roadmap.component.scss
+++ b/ethermancer-website/src/app/components/roadmap/roadmap.component.scss
@@ -1,4 +1,5 @@
-// Variables
+@import '~aos/dist/aos.css';
+
 $main-bg-color: rgb(1, 1, 81);
 $border-color: rgba(255, 255, 255, 0.2);
 $text-color-light: azure;
