--- a/ethermancer-website/src/app/components/testimonials/testimonials.component.scss
+++ b/ethermancer-website/src/app/components/testimonials/testimonials.component.scss
@@ -23,7 +23,7 @@ $text-color: #eee;
   .card {
     margin: 12px;
     background-color: transparent;
-
+    transition: transform 0.3s ease;
     &-in-carousel {
       .card-body {
         color: $card-color;
@@ -42,6 +42,11 @@ $text-color: #eee;
       margin: 0 1rem;
     }
   }
+
+  .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
 
   mdb-carousel-item {
     padding-bottom: 60px;
