--- a/ethermancer-website/src/app/components/footer/footer.component.html
+++ b/ethermancer-website/src/app/components/footer/footer.component.html
@@ -25,7 +25,7 @@
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a routerLink="/imprint" target="_blank">Imprint</a></li>
-                <li><a routerLink="/terms" target="_blank">Terms</a></li>
+                <li><a href="javascript:void(0)" (click)="openTermsDialog()" class="terms-link">Terms</a></li>
             </ul>
         </section>
         <section class="footer-section">
