--- a/ethermancer-website/src/app/components/terms/terms.component.scss
+++ b/ethermancer-website/src/app/components/terms/terms.component.scss
@@ -1,9 +1,6 @@
 .terms-container{
-    padding-top: 100px;
-    padding-left: 32px;
-    padding-right: 32px;
-    background-color: rgb(9, 0, 0);
-    color: white;
-    width: 100%;
-    min-height: 80vh;
+    padding-left: 20px;
+    padding-right: 20px;
+    max-height: 400px;
+    overflow-y: auto; 
 }
