--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/shop/product-list/product-list.component.scss
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/shop/product-list/product-list.component.scss
@@ -15,3 +15,39 @@
     align-items: center;
     flex-wrap: wrap;
 }
+
+.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.fadeIn {
+    display: block;
+    animation-name: fadeIn;
+}
+
+.fadeOut {
+    animation-name: fadeOut;
+    animation-fill-mode: forwards; // Stellt sicher, dass das Element im Endzustand der Animation bleibt
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
