--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/shop/shopping-cart/shopping-cart.component.html
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/src/app/components/shop/shopping-cart/shopping-cart.component.html
@@ -18,6 +18,10 @@
                 <button class="btn btn-danger" (click)="removeFromCart(item.product)">Remove</button>
               </div>
             </div>
+            <div [class]="toastClass"
+              style="position: fixed; bottom: 20px; right: 20px; background-color: blue; color: white; padding: 10px; border-radius: 10px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); z-index: 999; animation-duration: 0.5s;">
+              {{ removedProductName }} removed!
+            </div>
           </div>
         </div>
       </div>
@@ -32,7 +36,7 @@
           <input type="text" class="form-control" id="name" name="fullName" required minlength="3" maxlength="16"
             placeholder="Enter full name" [(ngModel)]="fullName" (ngModelChange)="handleNameChange($event)"
             #fullNameInput="ngModel">
-            <p *ngIf="nameLength > 0">{{nameLength}} / 32</p>
+          <p *ngIf="nameLength > 0">{{nameLength}} / 32</p>
           <div *ngIf="fullNameInput.invalid && fullNameInput.dirty">
             <div *ngIf="fullNameInput.errors?.['required']" class="text-danger">
               Full name is required.
@@ -48,9 +52,10 @@
         <div class="mb-3">
           <label for="address" class="form-label">Address</label>
           <input type="text" class="form-control" id="address" name="address" aria-describedby="address" required
-            minlength="3" maxlength="32" placeholder="Enter address" [(ngModel)]="address" #addressInput="ngModel" (ngModelChange)="handleAddressChange($event)">
-            <p *ngIf="addressLength > 0">{{addressLength}} / 32</p>
-            <div *ngIf="addressInput.invalid && addressInput.dirty">
+            minlength="3" maxlength="32" placeholder="Enter address" [(ngModel)]="address" #addressInput="ngModel"
+            (ngModelChange)="handleAddressChange($event)">
+          <p *ngIf="addressLength > 0">{{addressLength}} / 32</p>
+          <div *ngIf="addressInput.invalid && addressInput.dirty">
             <div *ngIf="addressInput.errors?.['required']" class="text-danger">
               Address is required.
             </div>
