update clean code

--- a/ethermancer-website/src/app/components/faq/faq.component.html
+++ b/ethermancer-website/src/app/components/faq/faq.component.html
@@ -1,4 +1,4 @@
-<div class="faq-container">
+<section class="faq-container">
   <h1>Frequently Asked Questions</h1>
   <div class="faq-item" *ngFor="let faq of faqs">
     <div class="faq-question" (click)="toggleAnswer(faq.id)">
@@ -9,4 +9,4 @@
       {{ faq.answer }}
     </div>
   </div>
-</div>
+</section>
