--- a/ethermancer-website/src/app/components/investor-informations/investor-informations.component.html
+++ b/ethermancer-website/src/app/components/investor-informations/investor-informations.component.html
@@ -1,4 +1,4 @@
-<div class="investorInfo-container flex-wrap">
+<section class="investorInfo-container flex-wrap">
     <!-- Executive Summary -->
     <div class="card" style="width: 18rem;">
         <div class="card-body">
@@ -71,4 +71,4 @@
             </ul>
         </div>
     </div>
-</div>
+</section>
