--- a/ethermancer-website/src/app/components/key-features/key-features.component.html
+++ b/ethermancer-website/src/app/components/key-features/key-features.component.html
@@ -1,9 +1,9 @@
-<div class='key-features-container'>
+<section class='key-features-container'>
     <div class='title text-light p-5'>
         <h1>Key Features</h1>
     </div>
     <div class="row">
-        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
+        <section class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class=" pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -19,8 +19,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
+        </section>
+        <section class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -36,8 +36,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
+        </section>
+        <section class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -53,8 +53,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
+        </section>
+        <section class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -69,8 +69,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
+        </section>
+        <section class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -86,8 +86,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
+        </section>
+        <section class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -103,8 +103,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
+        </section>
+        <section class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -120,8 +120,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
+        </section>
+        <section class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
             <div class="pt-3 mb-3 border-0">
                 <div class="row g-0">
                     <div class="col-md-2 icon">
@@ -137,9 +137,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </div>
     <div class="about-bottom-middle text-light">
         <p>Why us? -------------</p>
     </div>
-</div>
+</section>
