--- a/ethermancer-website/src/app/components/terms-confirmation/terms-confirmation.component.html
+++ b/ethermancer-website/src/app/components/terms-confirmation/terms-confirmation.component.html
@@ -1,4 +1,4 @@
-<div class="terms-confirmation">
+<section class="terms-confirmation">
     <p>By clicking “Agree” you confirm our <a [routerLink]="['/terms']">terms and conditions</a>.</p>
     <button (click)="agreeTerms()">Agree</button>
-</div>
+</section>
