--- a/ethermancer-website/src/app/components/to-ethermancer/to-ethermancer.component.html
+++ b/ethermancer-website/src/app/components/to-ethermancer/to-ethermancer.component.html
@@ -1,4 +1,4 @@
-<div class="to-ethermancer-container">
+<section class="to-ethermancer-container">
    
     <h1>Welcome to Ethermancer</h1>
 
@@ -16,4 +16,4 @@
     <p>
         Don't miss out on important updates, special offers, and early access invitations. Subscribe now on the formular below to stay in the loop.
     </p>
-</div>
+</section>
