--- a/ethermancer-website/src/app/components/whitepaper-dokument/whitepaper-dokument.component.html
+++ b/ethermancer-website/src/app/components/whitepaper-dokument/whitepaper-dokument.component.html
@@ -1,4 +1,4 @@
-<div class="whitepaper-dokument-container">
+<section class="whitepaper-dokument-container">
     <h1>Ethermancer Whitepaper</h1>
 
     <h2>Executive Summary</h2>
@@ -59,4 +59,4 @@
     <br>
     <br>
 
-</div>
+</section>
