--- a/ethermancer-website/src/app/components/whitepaper/whitepaper.component.html
+++ b/ethermancer-website/src/app/components/whitepaper/whitepaper.component.html
@@ -1,4 +1,4 @@
-<div class="whitepaper-container">
+<section class="whitepaper-container">
     <!-- Whitepaper Icon -->
     <div>
         <img src="/assets/img/whitepaper-bg.png" alt="Whitepaper Icon" />
@@ -13,4 +13,4 @@
     <div>
 
     </div>
-</div>
+</section>
