--- a/ethermancer-website/src/app/components/why-us/why-us.component.html
+++ b/ethermancer-website/src/app/components/why-us/why-us.component.html
@@ -1,4 +1,4 @@
-<div class='why-us-container text-light'>
+<section class='why-us-container text-light'>
     <div class='why-us-left'>
         <div class="card border-0">
             <div class="card-body w-50-p">
@@ -32,4 +32,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
