--- a/ethermancer-website/src/app/components/main-content/main-content.component.html
+++ b/ethermancer-website/src/app/components/main-content/main-content.component.html
@@ -1,13 +1,13 @@
 <div class="parallax-container">
     <div class="parallax"></div>
-    <div class="parallax-content">
+    <section class="parallax-content">
         <div id="about" class="about"><app-about-ethermancer></app-about-ethermancer></div>
-    </div>
+    </section>
 </div>
 <app-systems id="systems"></app-systems>
-<div id="keyFeatures" class="key-features-container">
+<section id="keyFeatures" class="key-features-container">
     <app-key-features></app-key-features>
-</div>
+</section>
 <app-why-us id="whyUs"></app-why-us>
 <app-walkthrough id="walkthrough"></app-walkthrough>
 <app-investor-informations id="investorInformations"></app-investor-informations>
