--- a/ethermancer-website/src/app/components/subscribe/subscribe.component.html
+++ b/ethermancer-website/src/app/components/subscribe/subscribe.component.html
@@ -1,4 +1,4 @@
-<div class="subscribe-container">
+<section class="subscribe-container">
     <h4 class="text-light">Subscribe our Newsletter</h4>
     <form #myForm="ngForm" class="row g-2" (ngSubmit)="submitForm(myForm)">
         <!-- Email -->
@@ -15,5 +15,5 @@
         style="position: fixed; bottom: 20px; right: 20px; background-color: blue; color: white; padding: 10px; border-radius: 10px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); z-index: 999;">
         Subscribe successfully!
     </div>
-</div>
+</section>
 
